changed to BantuAja

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image: ^4.2.0
   image_picker: ^1.1.1
   loading_animation_widget:
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
