--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.17.3
-  custom_rating_bar: ^2.0.5
+  custom_rating_bar: ^3.0.0
+  file_picker: ^8.0.5
   firebase_auth: ^4.19.5
   firebase_core: ^2.31.0
   firebase_storage: ^11.7.6
@@ -21,6 +22,7 @@ dependencies:
   image: ^4.2.0
   image_picker: ^1.1.1
   loading_animation_widget:
+  path: ^1.9.0
   table_calendar: ^3.1.2
 
 dev_dependencies:
